@@ -353,6 +353,14 @@ _edje_message_free(Edje_Message *em)
 		  emsg = (Edje_Message_Signal *)em->msg;
 		  if (emsg->sig) eina_stringshare_del(emsg->sig);
 		  if (emsg->src) eina_stringshare_del(emsg->src);
+                  if (emsg->data && (--(emsg->data->ref) == 0))
+                    {
+                       if (emsg->data->free_func)
+                         {
+                            emsg->data->free_func(emsg->data->data);
+                         }
+                       free(emsg->data);
+                    }
 		  free(emsg);
 	       }
 	     break;
@@ -417,6 +425,11 @@ _edje_message_send(Edje *ed, Edje_Queue queue, Edje_Message_Type type, int id, v
 	     emsg3 = calloc(1, sizeof(Edje_Message_Signal));
 	     if (emsg2->sig) emsg3->sig = eina_stringshare_add(emsg2->sig);
 	     if (emsg2->src) emsg3->src = eina_stringshare_add(emsg2->src);
+	     if (emsg2->data)
+               {
+                  emsg3->data = emsg2->data;
+                  emsg3->data->ref++;
+               }
 	     msg = (unsigned char *)emsg3;
 	  }
 	break;
@@ -670,7 +683,8 @@ _edje_message_process(Edje_Message *em)
      {
 	_edje_emit_handle(em->edje,
 			  ((Edje_Message_Signal *)em->msg)->sig,
-			  ((Edje_Message_Signal *)em->msg)->src);
+			  ((Edje_Message_Signal *)em->msg)->src,
+			  ((Edje_Message_Signal *)em->msg)->data);
 	return;
      }
    /* if this has been queued up for the app then just call the callback */
